refactor(admin): fix Law of Demeter violations in admin controllers
- ArtistAdminController: assign getArtistById() result to local variable before calling getName()
- UserAdminController: assign getMyPosts() result to allPosts before streaming; remove unused Collectors import
- ReportAdminController: assign handlers.getOrDefault() result to handler before calling dismissReport()

Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>